practical-3 design completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MADPractical3_20012021070</string>
+    <string-array name = "cityname">
+        <item>Ahmedabad</item>
+        <item>Surat</item>
+        <item>Baroda</item>
+        <item>Pune</item>
+    </string-array>
 </resources>
